--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@ a{
 <pre>
 Uli-Home.github.io
 <hr />
-<a href = "https://github.com/ulises-aguilar?tab=repositories">REPOS</a>
-<img src = "img/messi2.jpg">
+<a href = "https://github.com/Uli-Home.github.io?tab=repositories">REPOS</a>
+#<img src = "img/messi2.jpg">
 </pre>
 </center>
 </body>
