--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@ a{
 <body>
 <center>
 <pre>
-Uli-Home.github.io
+"You need help, I bet:V"
 <hr />
 <a href = "https://github.com/Uli-Home.github.io?tab=repositories">REPOS</a>
-#<img src = "img/messi2.jpg">
+<img src = "img/messi2.jpg">
 </pre>
 </center>
 </body>
