--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@ a{
 <center>
 <pre>
 "You need help, I bet:V"
-<hr />
 <a href = "https://github.com/Uli-Home.github.io?tab=repositories">REPOS</a>
-<img src = "img/messi2.jpg">
+<img src = "">
 </pre>
 </center>
 </body>
