--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ a{
 <center>
 <pre>
 "You need help, I bet:V"
-<a href = "https://github.com/Uli-Home.github.io?tab=repositories">REPOS</a>
+<a href = "https://github.com/Uli-Home.github.io?tab=repositories">Click Here</a>
 <img src = "">
 </pre>
 </center>
