--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ a{
 <pre>
 "You need help, I bet:V"
 <a href = "https://github.com/Uli-Home.github.io?tab=repositories">Click Here</a>
-<img src = "">
+<img src = "meme.jpg">
 </pre>
 </center>
 </body>
