--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 
-
 <!-- index.html -->
 <html>
-<head><title> Uli-Home.github.io </title>
+<head><title> BruhUli.github.io </title>
 <style>
 body{
 	color:#000000;
@@ -21,9 +20,10 @@ a{
 <body>
 <center>
 <pre>
-"You need help, I bet:V"
+BruhUli.github.io
 <hr />
-<a href = "https://github.com/Uli-Home.github.io?tab=repositories">Click Here</a>
+<a href = "computer-build-form.html">Computer Build</a>
+<a href = "https://github.com/BruhUli?tab=repositories">REPOS</a>
 <img src = "meme.jpg">
 </pre>
 </center>
