--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ a{
 BruhUli.github.io
 <hr />
 <a href = "computer-build-form.html">Computer Build</a>
-<a href = "https://github.com/BruhUli?tab=repositories">REPOS</a>
+<a href = "https://github.com/BruhUli/BruhUli.github.io/blob/master/index.html">REPOS</a>
 <img src = "meme.jpg">
 </pre>
 </center>
