--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ a{
 <body>
 <center>
 <pre>
-BruhUli.github.io
+You need help, I bet:V
 <hr />
 <a href = "computer-build-form.html">Computer Build</a>
 <a href = "https://github.com/BruhUli/BruhUli.github.io/blob/master/index.html">REPOS</a>
