--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ a{
 <pre>
 You need help, I bet:V
 <hr />
-<a href = "https://github.com/BruhUli/BruhUli.github.io/blob/master/index.html">REPOS</a>
+<a href = "https://github.com/BruhUli/BruhUli.github.io/blob/master/index.html">Click on me!</a>
 <img src = "meme.jpg">
 </pre>
 </center>
