--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <style>
 body{
 	color:#000000;
-	background-color: #FF470F;
+	background-color: #328da8;
 	font-family: system-ui, sans-serif;
 	font-size: 18px;
 }
