--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@ a{
 <pre>
 You need help, I bet:V
 <hr />
-<a href = "https://github.com/BruhUli?tab=repositories">Click on me!</a>
+<a href = "https://github.com/BruhUli/Homework">Click on me!</a>
 <img src = "meme.jpg">
 </pre>
+Just click on it
 </center>
 </body>
 </html>
